[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ytracker"
version = "0.0.1"
authors = [
  { name="Dragan Stojakovic", email="stojakovicdragan98@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Environment :: No Input/Output (Daemon)",
]

[project.urls]
"Homepage" = "https://github.com/draganStojakovic/ytracker"
"Bug Tracker" = "https://github.com/draganStojakovic/ytracker/issues"